force-app/main/default/objects/Project__c/fields/Implemented_Clouds__c.field-meta.xml
<CustomField>
    <fullName>Implemented_Clouds__c</fullName>
    <label>Implemented Clouds</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Field Service Cloud</fullName>
            </value>
            <value>
                <fullName>Data Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Experience Cloud</fullName>
            </value>
            <value>
                <fullName>Revenue Cloud</fullName>
            </value>
            <value>
                <fullName>Financial Services Cloud</fullName>
            </value>
            <value>
                <fullName>Health Cloud</fullName>
            </value>
            <value>
                <fullName>Education Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>