force-app/main/default/objects/Project__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>