force-app/main/default/objects/Project__c/fields/Send_WeeklyStatusForm__c.field-meta.xml
<CustomField>
    <fullName>Send_WeeklyStatusForm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send WeeklyStatusForm</label>
    <type>Checkbox</type>
</CustomField>